fix the overflow of the return button

--- a/style.css
+++ b/style.css
@@ -32,13 +32,12 @@ body {
 
 .success-message {
   display: none;
-  height: 100%;
   text-align: center;
   padding-top: 10px;
 }
 
 .illustration>img {
-  width: 150px;
+  width: 120px;
 }
 
 .result>p {
